Avance de Laboratorio 1

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <p>Estudie en el colegio Cardenal Gonzales Zumarraga y ahora estoy cursando una tecnologia en la PUCE</p>
 
     <p>Mis redes sociales:</p>
-<a href="https://tu-perfil-social.com">Nombre de la red social</a>
+<a href="https://instagram.com/elian.valenzuela.16.">Instagram</a>
 
 
 </body>
